@@ -13,3 +13,5 @@ zbus-6.0.0
 4. 底层通讯支持znet升级到6.0.0，Dispatcher与SelectorThread模型更新，更简单使用
 5. Broker、RemotingClient退出时偶尔出现的read InterruptException。
 
+zbus-6.1.0-SNAPSHOT
+1. MessageStoreSql 获取SQL用户名bug @玛雅牛
